Working on switch output to plist

--- a/drummond_project2/project2.plist
+++ b/drummond_project2/project2.plist
@@ -10,5 +10,8 @@
         <string>This worked!</string>
         <key>favrestaurant</key>
         <string>This worked!</string>
+        <key>button</key>
+        <string></string>
+    
     </dict>
 </plist>
