Added proj2.plist to bundle resources

--- a/drummond_project2/proj2.plist
+++ b/drummond_project2/proj2.plist
@@ -11,6 +11,6 @@
 	<key>favrestaurant</key>
 	<string>This worked!</string>
 	<key>button</key>
-	<string>did it work</string>
+	<false/>
 </dict>
 </plist>
