Deleted excess code

--- a/drummond_project2/proj2.plist
+++ b/drummond_project2/proj2.plist
@@ -3,14 +3,14 @@
 <plist version="1.0">
 <dict>
 	<key>First_name</key>
-	<string>This</string>
+	<string>march 2</string>
 	<key>Last_name</key>
-	<string>This</string>
+	<string>march 2</string>
 	<key>favfood</key>
-	<string>This worked!</string>
+	<string>march 2</string>
 	<key>favrestaurant</key>
-	<string>This worked!</string>
+	<string>march 2</string>
 	<key>button</key>
-	<false/>
+	<true/>
 </dict>
 </plist>
