Remove white space and commented code

--- a/drummond_project2/proj2.plist
+++ b/drummond_project2/proj2.plist
@@ -3,13 +3,13 @@
 <plist version="1.0">
 <dict>
 	<key>First_name</key>
-	<string>march 2</string>
+	<string>lebron</string>
 	<key>Last_name</key>
-	<string>march 2</string>
+	<string>james</string>
 	<key>favfood</key>
-	<string>march 2</string>
+	<string>is</string>
 	<key>favrestaurant</key>
-	<string>march 2</string>
+	<string>king</string>
 	<key>button</key>
 	<true/>
 </dict>
